# Sensor_Simulation

./: CMakeLists.txt  README.md  design.txt  main.cpp
include/: DistanceEmulator.h  InfraredEmulator.h  LaserEmulator.h  SensorEmulator.h  SensorFrontend.h  SonarEmulator.h
src/: DistanceEmulator.cpp  InfraredEmulator.cpp  LaserEmulator.cpp  SensorEmulator.cpp  SensorFrontend.cpp  SonarEmulator.cpp
